  translate

File: glk.R
-----------

- Uses the complete argument name MARGIN instead of MAR

File: rcs.R
-----------

- Uses warning() instead of cat() in one (unlikely?, impossible?) error
  situation

File: read.tridas.R
-------------------

- Fixed a bug where a wrong number of derived series was reported in
  summary output

File: series.rwl.plot.R
-----------------------

- Uses complete argument names

File: wavelet.plot.R
--------------------

- Uses complete argument names
- gettext() is used in some default values

File: wavelet.plot.Rd
---------------------

- Uses complete argument names
- Default values match the changes in wavelet.plot.R

File: write.crn.R
-----------------

- Uses complete argument names

* CHANGES IN dplR VERSION 1.4.2
* Ran through Mikko's changes. June 2, 2011. AGB
* Changes below by Mikko Korpela

All .rda data files (change reported June 7, after release in CRAN)
-------------------

- Data files were repackaged by R-Forge using a tight compression
  level. This is done every time R-Forge builds the dplR package, but the
  files are expected to stay identical if no changes are made to the
  compression system. The new data files supposedly require R 2.10.0, but
  this does not affect dplR which requires R >= 2.11.0 anyway.

File: ccf.series.rwl.R
----------------------

- as.vector() is more intuitive than c() with one argument
- Cosmetic improvement

File: ccf.series.rwl.Rd
-----------------------

- bin.floor must be non-negative, not necessarily positive

File: cms.R
-----------

- Removed redundant c()
- Some values are stored for reuse

File: corr.rwl.seg.R
--------------------

- par(op) moved to on.exit()
- Odd and even segs are plotted with the same code, avoiding copy-paste
- Some values are stored for reuse
- Some unnecessary colnames are not set
- Cosmetic improvement

File: corr.rwl.seg.Rd
---------------------

- bin.floor must be non-negative, not necessarily positive

File: corr.series.seg.Rd